# mfl

./: .gitattributes  .gitignore  .nvim.lua  .ocamlformat  README.md  c-output.ll  dune-project  fibonacci  fibonacci.ll  flake.nix  input.c  input.mfl  mfl-output.ll  mfl.opam  primes  primes.ll  program
data/: for.mfl  full.mfl  functions.mfl  if.mfl  variables.mfl  vars.mfl  while.mfl
examples/: a.mfl  factorial.mfl  fibonacci.mfl  pointers.mfl  primes.mfl  quicksort.mfl  raytracer.mfl  tree.mfl  typedefs.mfl
include/: math.h  stdbool.h  stdio.h  stdlib.h
lib/: ast.ml  ast.mli  codegen.ml  codegen_context.ml  codegen_expr.ml  codegen_stmt.ml  diagnostic.ml  dune  interpreter.ml  interpreter.mli  lexer.ml  lexer.mli  lexer_reader.ml  lexer_state.ml  parser.ml  parser.mli  parser_expr.ml  parser_state.ml  parser_stmt.ml  parser_types.ml  preprocessor.ml  pretty.ml  pretty.mli  token.ml  token.mli  typechecker.ml  typechecker_env.ml  typechecker_error.ml  typechecker_expr.ml  typechecker_stmt.ml  typechecker_types.ml
llvm/: module.ll  runtime.c
llvm_ext/: README.md  dune  llvm_ext.ml  llvm_ext_stubs.c
runtime/: runtime.c
test/: dune  test_codegen.ml  test_interpreter.ml  test_lexer.ml  test_mfl.ml  test_parser.ml  test_typechecker.ml
test/cram/: arith.t  assign.t  bitwise.t  bool.t  break_continue.t  break_for.t  call_return.t  call_void.t  cast.t  cmp.t  dune  empty_for.t  empty_stmt.t  expr.t  for.t  for_partial.t  full.t  func_params.t  if_else.t  if_only.t  incdec.t  int_types.t  int_types_arith.t  invalid_type.t  lex_error.t  main.t  missing_return.t  (+54 more)
(+65 files in other folders)
